# nitrate

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  TODO.md  compile_flags.txt  make.py  no3.json  quix-meta
bench/: CMakeLists.txt  ast-decoder.cc  ast-encoder.cc
compiler/: CMakeLists.txt  Cargo.toml
compiler/benches/: parse_type_bench.rs
compiler/lexer/: CMakeLists.txt  Cargo.toml
compiler/lexer.old/tools/: nitrate-lexer-fuzz.cc  nitrate-lexer-noout.cc
compiler/lexer/corpus/: program.nit
compiler/lexer/example/: nitrate-lex.cc
compiler/lexer/src/: Comment.cc  Lexer.cc  LexicalStream.cc  ParseToken.cc  Token.cc  lib.rs  main.rs
compiler/lexer/test/: main.cc
compiler/lexer/tools/: nitrate-lexer-fuzz.cc  nitrate-lexer-noout.cc  nitrate-lexer-stdin.cc
compiler/nitrate_evaluate/: Cargo.toml
compiler/nitrate_evaluate/src/: abstract_machine.rs  compound.rs  control_flow.rs  lib.rs  symbol.rs  type_system.rs  type_system_test.rs
compiler/nitrate_evaluate/tests/: type_system_test.rs
compiler/nitrate_execute/: Cargo.toml
compiler/nitrate_execute/src/: jit.rs
compiler/nitrate_lexical/: Cargo.toml
compiler/nitrate_lexical/src/: lex.rs  lib.rs  token.rs
compiler/nitrate_parse/: Cargo.toml
compiler/nitrate_parse/benches/: parse_type_bench.rs
compiler/nitrate_parse/src/: expression.rs  symbol_table.rs
compiler/nitrate_parsetree/: Cargo.toml
compiler/nitrate_parsetree/src/: builder.rs  builder_helper.rs  expression.rs  lib.rs  node.rs  types.rs
compiler/nitrate_resolution/: Cargo.toml
compiler/nitrate_resolution/src/: lib.rs
compiler/nitrate_resolve/: Cargo.toml
compiler/nitrate_structure/src/: builder_helper.rs
compiler/nitrate_syntax/: Cargo.toml
compiler/nitrate_syntax/benches/: parse_type_bench.rs
compiler/nitrate_syntax/src/: expression.rs  lib.rs  parse.rs  preamble.rs  source_model.rs  symbol_table.rs  to_code.rs  type_system.rs
compiler/parser/: CMakeLists.txt  Cargo.toml
compiler/parser/src/: CheckAST.cc  DebugAST.cc  ParseTree.cc  Parser.cc  SymbolTable.cc
compiler/parser/test/: main.cc
compiler/parser/tools/: nitrate-parser-fuzz.cc  nitrate-parser-noout.cc  nitrate-parser-stdin.cc
compiler/src/: lib.rs
compiler/src/evaluate/: abstract_machine.rs  compound.rs  control_flow.rs  mod.rs  symbol.rs  type_system.rs  type_system_test.rs
compiler/src/lexer/: lex.rs  lexer.rs  mod.rs  token.rs
compiler/src/lexical/: lex.rs  mod.rs  token.rs
compiler/src/parser/: control_flow.rs  definition.rs  expression.rs  mod.rs  parse.rs  preamble.rs  source_model.rs  symbol_table.rs  to_code.rs  type_system.rs  types.rs
compiler/src/parsetree/: array_type.rs  bin_expr.rs  binary_op.rs  block.rs  builder.rs  builder_helper.rs  character.rs  control_flow.rs  debug.rs  expression.rs  flat_tree.rs  function.rs  function_type.rs  generic_type.rs  list.rs  map_type.rs  mod.rs  node.rs  number.rs  object.rs  opaque_type.rs  origin.rs  reference.rs  refinement_type.rs  returns.rs  scope.rs  slice_type.rs  statement.rs  storage.rs  string.rs  struct_type.rs  to_code.rs  tuple.rs  tuple_type.rs  types.rs  unary_expr.rs  unary_op.rs  variable.rs
compiler/src/syntax/: expression.rs  mod.rs  parse.rs  preamble.rs  source_model.rs  symbol_table.rs  to_code.rs  type_system.rs
examples/usage/: CMakeLists.txt  README.md  lex-source.cc  minify.cc  preprocess-source.cc  quix-lint.cc  quix-parse.cc  realtime-lexing.cc  render-import.cc
extensions/quixd/: CMakeLists.txt  README.md
libnitrate-seq/: CMakeLists.txt
libnitrate-seq/include/nitrate-seq/: Classes.hh  Lib.h  Preprocess.h
libnitrate-seq/src/core/: Lib.cc  Preprocess.cc  Preprocess.hh  StdPrefix.cc
libnitrate-seq/src/plugin/: README.md
libnitrate-seq/src/qcall/: List.hh  Setup.cc  sys_abort.cc  sys_debug.cc  sys_defer.cc  sys_emit.cc  sys_error.cc  sys_fatal.cc  sys_fetch.cc  sys_get.cc  sys_info.cc  sys_next.cc  sys_peek.cc  sys_random.cc  sys_set.cc  sys_starttime.cc  sys_time.cc  sys_warn.cc
libnitrate/fuzzer/: CMakeLists.txt  libnitrate-basic-lexer-fuzz.cc
libnitrate/test/: CMakeLists.txt
libnitrate/test/src/: lexer-route.cc  lib-init.cc  meta-route.cc  parser-route.cc
libquix-ir/fuzzer/: CMakeLists.txt  fuzzer.cc
libquix-lexer/: CMakeLists.txt  symexport.map
libquix-lexer/include/quix-lexer/: Base.hh  Classes.hh  Lexer.h  Lib.h  Token.h
libquix-lexer/src/: Base.cc  Lexer.cc  Lib.cc
libquix-lexer/tests/: CMakeLists.txt  bench.cc  dist.cc  lex.cc
libquix/test/: CMakeLists.txt
libquix/test/src/: lexer-route.cc  meta-route.cc  parser-route.cc
no3/: CMakeLists.txt  Cargo.toml  symexport.map
no3/exe/: CMakeLists.txt
no3/exe/src/: main.cc
no3/lib/: CMakeLists.txt
no3/src/: ArgparseSetup.cc  argparse.h  argparse.hpp  main.cc  qpkg.cc
no3/src/clean/: Cleanup.cc  Cleanup.hh
no3/src/conf/: Config.cc  Config.hh  Parser.hh  SPDX.cc  SPDX.hh  Validate.cc  Validate.hh  YamlParser.cc
no3/src/core/: ANSI.cc  ANSI.hh  Config.hh  Logger.cc  Logger.hh  main.cc
no3/src/dev/: LexicalBenchmarkSource.cc  route.cc
no3/src/init/: Package.cc  Package.hh
no3/src/install/: Install.hh  install.cc
no3/src/lsp/: nitrated.h
pipeline/: CMakeLists.txt  README.md
pipeline/libnitrate/: CMakeLists.txt  symexport.map
pipeline/libnitrate-alpha/: CMakeLists.txt
pipeline/libnitrate-alpha-check/: CMakeLists.txt
pipeline/libnitrate-alpha-opt/: CMakeLists.txt
pipeline/libnitrate-beta/: CMakeLists.txt
pipeline/libnitrate-beta-opt/: CMakeLists.txt
pipeline/libnitrate-core/: CMakeLists.txt  README.md
pipeline/libnitrate-core/src/: Cache.cc  CatchAll.cc  Env.cc  Init.cc  (+10 more)
pipeline/libnitrate-emit/: CMakeLists.txt
pipeline/libnitrate-ir/: CMakeLists.txt
pipeline/libnitrate-lexer/: CMakeLists.txt
pipeline/libnitrate-mangle/: CMakeLists.txt
pipeline/libnitrate-parser/: CMakeLists.txt  README.md  symexport.map
pipeline/libnitrate-seq/: CMakeLists.txt  README.md  symexport.map
qpkg/: CMakeLists.txt
qpkg/src/: qpkg.cc
test/: CMakeLists.txt  main.cc
test/src/: Run.cc
(+1703 files in other folders)
