[package]
name = "nitrate"
version = "0.1.0"
edition = "2024"

[dependencies]
nitrate_translate = { path = "src/translation" }

env_logger = "0.11.8"
log = "0.4.28"
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.2"

# [workspace]
# members = [ "nitrate_translation",
#     # "src/diagnosis/*", 
#     "src/translation/*",
#     # "src/optimization/*"
# ]
