[package]
name = "nitrate"
version = "0.1.0"
edition = "2024"

[dependencies]
nitrate_diagnosis = { path = "src/diagnosis" }
nitrate_optimization = { path = "src/optimization" }
nitrate_translation = { path = "src/translation" }
nitrate_driver = { path = "src/driver" }

env_logger = "0.11.8"
log = "0.4.28"
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.2"
serde_json = "1.0.145"
interned-string = { version = "0.3.0", features = ["serde"] }
