[package]
name = "nitrate_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
apint = "0.2.0"
env_logger = "0.11.8"
hashbrown = "0.15.4"
log = "0.4.27"
slog = "2.7.0"
smallvec = "1.15.1"
spdx = "0.10.9"
stackvector = "1.1.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracking-allocator = "0.4.0"
