[package]
name = "nitrate_compiler"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "parse_type_bench"
harness = false

[dependencies]
apint = "0.2.0"
bimap = "0.6.3"
env_logger = "0.11.8"
hashbrown = "0.15.4"
log = "0.4.27"
slog = "2.7.0"
smallvec = "1.15.1"
spdx = "0.11.0"
stackvector = "1.1.1"
