cmake_minimum_required(VERSION 3.15)
project(nitrate-pipeline CXX)

add_subdirectory(libnitrate-core)
add_subdirectory(libnitrate-lexer)
add_subdirectory(libnitrate-seq)
add_subdirectory(libnitrate-parser)
add_subdirectory(libnitrate-mangle)
add_subdirectory(libnitrate-alpha)
add_subdirectory(libnitrate-alpha-opt)
add_subdirectory(libnitrate-beta)
add_subdirectory(libnitrate-beta-opt)
