[package]
name = "nitrate_lexer"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
stackvector = "1.1.1"
string-interner = "0.19.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracking-allocator = "0.4.0"

[[bin]]
name = "nitrate_lexer_stdin"
path = "src/main.rs"
